# panelplots

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: github_setup.md  peru_blackmarble_figure_notes.md
examples/: peru_blackmarble_example.py
notebooks/: peru_blackmarble_colab_template.ipynb  readme.md
src/panelplots/: __init__.py  fanchart.py  io.py  spaghetti.py  style.py  transforms.py  utils.py
tests/: test_basic.py
