[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panelplots"
version = "0.1.1"
description = "Publication-ready spaghetti plots and descriptive fan charts for large panel datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Favio Sergio Leiva Cárdenas" }
]
keywords = [
  "panel data",
  "spaghetti plot",
  "fan chart",
  "quantiles",
  "remote sensing",
  "nighttime lights",
  "matplotlib"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
examples = [
  "pyarrow>=10",
  "huggingface_hub>=0.20",
  "jupyter>=1.0"
]
test = [
  "pytest>=7"
]

[tool.setuptools.packages.find]
where = ["src"]
